--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
+<link rel="stylesheet" type="text/css" href="css.css">
+
 <article class="post">
 
   <header class="post-header">
