--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,13 @@
+<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+<script type="text/javascript">
+console.log("trying to redirect to new new")
+if (window.location.hostname == 'novimatrem.gitlab.io') {
+   window.location.replace("http://novimatrem.uk/blog"); 
+}
+</script>
+
+<link rel="canonical" href="https://novimatrem.uk/blog">
+<!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
 <header class="site-header">
 
   <div class="wrapper">
