--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,18 @@
 layout: default
 ---
 <!DOCTYPE html>
+
+<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+<script type="text/javascript">
+console.log("trying to redirect to new new")
+if (window.location.hostname == 'novimatrem.gitlab.io') {
+   window.location.replace("http://novimatrem.uk/blog"); 
+}
+</script>
+
+<link rel="canonical" href="https://novimatrem.uk/blog">
+<!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+
 <script>
 document.getElementsByTagName("html")[0].insertAdjacentHTML(
     "beforeend",
