--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,17 @@ layout: default
 ---
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 
+<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+<script type="text/javascript">
+console.log("trying to redirect to new new")
+if (window.location.hostname == 'novimatrem.gitlab.io') {
+   window.location.replace("http://novimatrem.uk/blog"); 
+}
+</script>
+
+<link rel="canonical" href="https://novimatrem.uk/blog">
+<!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
