--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird..
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
@@ -7,7 +7,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
 </script>
 
 <link rel="canonical" href="https://novimatrem.uk/blog">
-<!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+/i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
 
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
