--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird..
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
@@ -10,7 +10,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
 </script>
 
 <link rel="canonical" href="https://novimatrem.uk/blog">
-<!-- /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+/i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
 
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 
