HTTPS ONLY FIX ALL BLOG?

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
-   window.location.replace("http://novimatrem.uk/blog"); 
+   window.location.replace("https://novimatrem.uk/blog"); 
 }
 </script>
 
