--- a/_layouts/redirected.html
+++ b/_layouts/redirected.html
@@ -5,14 +5,14 @@
 	<title>About | Novimatrem - Blog</title>
 	 <link rel="canonical" href="https://novimatrem.uk/blog/about">
 	<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 	
 	<!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
-   window.location.replace("http://novimatrem.uk/blog/about"); 
+   window.location.replace("https://novimatrem.uk/blog/about"); 
 }
 </script>
 
