--- a/css-spoiler-boxes-toyhouse-MODDED.css
+++ b/css-spoiler-boxes-toyhouse-MODDED.css
@@ -5,13 +5,13 @@
     This is the CSS for spoiler boxes. Please see the demo for details!
     You can edit the section below to style the spoiler boxes.
     The required HTML to make a spoiler box on a page is here: 
-    http://loader.8bitbirdsong.net/text/view/17
+    https://loader.8bitbirdsong.net/text/view/17
 	Feel free to use/incorporate any part of this
 	in a separate stylesheet, credit optional.
 	
 	Last updated 2/10/15
  
-    http://toyhou.se/aleator
+    https://toyhou.se/aleator
  
 ***************************************************************************/
 
