--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: default
 <script type="text/javascript">
 console.log("trying to redirect to new new")
 if (window.location.hostname == 'novimatrem.gitlab.io') {
-   window.location.replace("http://novimatrem.uk/blog"); 
+   window.location.replace("https://novimatrem.uk/blog"); 
 }
 </script>
 
