--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
 
 <link rel="canonical" href="https://novimatrem.uk/blog">
 /i got a domain, so, this is needed to redirect, because gitlab pages is weird.. -->
+  <!DOCTYPE html>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
