--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 
+<meta name="keywords" content="HTML,CSS,Novimatrem,Whitehat,Novi,novimatrem.uk,Blog,Tea,Linux">
+
 <!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird..
 <script type="text/javascript">
 console.log("trying to redirect to new new")
