--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -4,5 +4,6 @@
   1. Head over to https://realfavicongenerator.net/ to add your own favicons.
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
+<meta charset="utf-8">
 <!-- SEO tags -->
 {% seo %}
