initial attempt at dark theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@ document.getElementsByTagName("html")[0].insertAdjacentHTML(
 
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<meta name="color-scheme" content="dark light">
 
   {%- include head.html -%}
 
