attempt to get mastodon verify ticks for my blog too

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@ document.getElementsByTagName("html")[0].insertAdjacentHTML(
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <meta name="color-scheme" content="dark light">
+<a rel="me" href="https://meow.social/@novimatrem" style="display:none; visibility:hidden; color:transparent; text-decoration-color:transparent; font-size:0px;">My Mastodon</a>
+<a rel="me" href="https://fosstodon.org/@novichan" style="display:none; visibility:hidden; color:transparent; text-decoration-color:transparent; font-size:0px;">My Mastodon alt</a>
 
   {%- include head.html -%}
 
