dark theme stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@ document.getElementsByTagName("html")[0].insertAdjacentHTML(
 <meta name="color-scheme" content="dark light">
 <a rel="me" href="https://meow.social/@novimatrem" style="display:none; visibility:hidden; color:transparent; text-decoration-color:transparent; font-size:0px;">My Mastodon</a>
 <a rel="me" href="https://fosstodon.org/@novichan" style="display:none; visibility:hidden; color:transparent; text-decoration-color:transparent; font-size:0px;">My Mastodon alt</a>
-
+<meta name="color-scheme" content="light dark" />
   {%- include head.html -%}
 
   <body>
