an attempt to finally do a dark theme blog-wide

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,18 @@ document.getElementsByTagName("html")[0].insertAdjacentHTML(
   {%- include head.html -%}
 
   <body>
+    
+<style>
+html {
+  filter: invert(1.0);
+}
+body {
+  filter: invert(0.0);
+}
+img {
+  filter: invert(1.0);
+}
+</style>
 
     {%- include header.html -%}
 
