attempt final fix for dark theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,12 @@ body {
 img {
   filter: invert(1.0);
 }
+pre {
+  filter: invert(1.0);
+}
+iframe {
+  filter: invert(1.0);
+}
 </style>
 
     {%- include header.html -%}
