--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,12 @@ pre {
 iframe {
   filter: invert(1.0);
 }
+article {
+  filter: invert(1.0);
+}
+span {
+filter: invert(1.0);
+}
 </style>
 
     {%- include header.html -%}
