--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@ body {
   filter: invert(0.0);
 }
 img {
-  filter: invert(0.0);
+  filter: invert(1.0);
 }
 pre {
   filter: invert(1.0);
@@ -59,7 +59,8 @@ h1 {
 filter: invert(1.0);
 }
 em {
-filter: invert(1.0);
+filter: invert(0.0);
+color:black;
 }
 p {
 filter: invert(1.0);
