--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,8 +47,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
   <span class="timeel days">00</span>
   <span class="timeel timeRefDays">days on HRT</span>
 </div>
-<br>
-![https://gitlab.com/Novimatrem/blog/badges/master/pipeline.svg](https://gitlab.com/Novimatrem/blog/badges/master/pipeline.svg)
+<img src="https://gitlab.com/Novimatrem/blog/badges/master/pipeline.svg"></img>
 <br>
 <script>
 /*
