--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,8 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
 <img src="https://gitlab.com/Novimatrem/blog/badges/master/pipeline.svg"></img>
 <br>
 <a href="https://gitlab.com/Novimatrem/blog/-/pipelines" style="font-size:12.25px;" target="_blank">Force Pipeline Rerun</a>
+<br>
+<a href="https://gitlab.com/-/profile/usage_quotas#pipelines-quota-tab" style="font-size:12.25px;" target="_blank">Quota</a>
 <script>
 /*
  * Basic Count Up from Date and Time
