--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,15 @@ filter: invert(1.0);
 table {
   width:180px;
 }
+.post-link {
+  color: #10585d;
+}
+#post-link {
+  color: #10585d;
+}
+a.post-link {
+  color: #10585d;
+}
 </style>
 
     {%- include header.html -%}
