--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,12 +81,21 @@ table {
   width:180px;
 }
 .post-link {
-  color: #10585d;
+  color: #efa7a2;
 }
 #post-link {
-  color: #10585d;
+  color: #efa7a2;
 }
 a.post-link {
+  color: #efa7a2;
+}
+a {
+  color: #10585d;
+}
+#a {
+  color: #10585d;
+}
+a. {
   color: #10585d;
 }
 </style>
