--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,22 +81,22 @@ table {
   width:180px;
 }
 .post-link {
-  color: #efa7a2;
+  color: #ff7eb7;
 }
 #post-link {
-  color: #efa7a2;
+  color: #ff7eb7;
 }
 a.post-link {
-  color: #efa7a2;
+  color: #ff7eb7;
 }
 a {
-  color: #10585d;
+  color: #008148;
 }
 #a {
-  color: #10585d;
+  color: #008148;
 }
 a. {
-  color: #10585d;
+  color: #008148;
 }
 </style>
 
