--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,21 +82,27 @@ table {
 }
 .post-link {
   color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 #post-link {
   color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 a.post-link {
   color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 a {
-  color: #008148;
+  color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 #a {
-  color: #008148;
+  color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 a. {
-  color: #008148;
+  color: #ff7eb7;
+  outline: 1px solid #ff7eb7;
 }
 </style>
 
