--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,27 +82,27 @@ table {
 }
 .post-link {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 #post-link {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 a.post-link {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 a {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 #a {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 a. {
   color: #ff7eb7;
-  outline: 1px solid #ff7eb7;
+  outline: 0px solid transparent;
 }
 </style>
 
