--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="{{ 'feed.xml' | relative_url }}">
+          <a href="{{ 'feed.xml' | relative_url }}" style="color:#ff7eb7;">
             <svg class="svg-icon orange">
               <use xlink:href="{{ 'assets/minima-social-icons.svg#rss' | relative_url }}"></use>
             </svg><span>Subscribe</span>
@@ -49,9 +49,9 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
 </div>
 <img src="https://gitlab.com/Novimatrem/blog/badges/master/pipeline.svg"></img>
 <br>
-<a href="https://gitlab.com/Novimatrem/blog/-/pipelines" style="font-size:12.25px;" target="_blank">Force Pipeline Rerun</a>
+<a href="https://gitlab.com/Novimatrem/blog/-/pipelines" style="font-size:12.25px; color: #ff7eb7;" target="_blank">Force Pipeline Rerun</a>
 <br>
-<a href="https://gitlab.com/-/profile/usage_quotas#pipelines-quota-tab" style="font-size:12.25px;" target="_blank">Quota</a>
+<a href="https://gitlab.com/-/profile/usage_quotas#pipelines-quota-tab" style="font-size:12.25px; color:#ff7eb7;" target="_blank">Quota</a>
 <script>
 /*
  * Basic Count Up from Date and Time
