--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@ a.post-link {
   outline: 0px solid transparent;
 }
 a {
-  color: #ff7eb7;
+  color: #008148;
   outline: 0px solid transparent;
 }
 #a {
