--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,10 @@ a {
   color: #008148;
   outline: 0px solid transparent;
 }
+a:visited {
+  color: #008148;
+  outline: 0px solid transparent;
+}
 #a {
   color: #ff7eb7;
   outline: 0px solid transparent;
