--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,7 +97,7 @@ a {
   outline: 0px solid transparent;
 }
 a:visited {
-  color: #008148;
+  color: #ff7eb7;  /* MUST remain like this to have blog post names on homepage in pink */
   outline: 0px solid transparent;
 }
 #a {
