--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@ html {
 }
 body {
   filter: invert(0.0);
-  background: linear-gradient( rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75) ), url('https://novimatrem.uk/assets/background-normal-invert.JPG') no-repeat center center fixed; background-size:cover; filter: invert(0.0);
+  background: linear-gradient( rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.85) ), url('https://novimatrem.uk/assets/background-normal-invert.JPG') no-repeat center center fixed; background-size:cover; filter: invert(0.0);
 }
 img {
   filter: invert(1.0);
@@ -108,6 +108,10 @@ a:visited {
 a. {
   color: #ff7eb7;
   outline: 0px solid transparent;
+}
+.site-footer {
+color:transparent;
+border-top: 0px solid transparent;
 }
 </style>
 
