--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,6 +113,11 @@ a. {
 color:transparent;
 border-top: 0px solid transparent;
 }
+.site-header {
+color:transparent;
+border-top: 0px solid transparent;
+border-bottom: 0px solid transparent;
+}
 </style>
 
     {%- include header.html -%}
