--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
       {%- endif %}
       </div>
       <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
+        <p style="text-shadow: 1px 1px 1px rgb(0, 0, 0);">{{ site.description | escape }}</p>
       </div>
     </div>
 
