--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,6 +119,15 @@ color:transparent;
 border-top: 0px solid transparent;
 border-bottom: 0px solid transparent;
 }
+.wrapper {
+	max-width: calc(800px - (30px * 2));
+	padding-right: 30px;
+	padding-left: 30px;
+	background: rgba(255,255,255,0.5);
+	border-radius: 16px;
+	padding: 10px;
+	text-rendering: optimizeLegibility;
+}
 </style>
 
     {%- include header.html -%}
