attempt to make green link go away

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ a.post-link {
   outline: 0px solid transparent;
 }
 a {
-  color: #008148;
+  color: #ff7eb7;
   outline: 0px solid transparent;
 }
 a:visited {
