--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@ a.post-link {
   outline: 0px solid transparent;
 }
 a {
-  color: #ff7eb7;
+  color: #008148; /* MUST remain like this to have certain kinds of links in pink */
   outline: 0px solid transparent;
 }
 a:visited {
