hopefully working now

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,9 +42,8 @@ if (window.location.hostname == 'novimatrem.gitlab.io') {
     <div class="social-links">
       {%- include social.html -%}
     </div>
-<p></p>
-<br>
-<img title="Trans pride!" alt="Trans pride!" src="./assets/banner.png" style="width:10%; height:auto; margin:0 auto; text-align: center; display: block; border:3px solid black; padding:0px;">
+
+<img title="Trans pride!" alt="Trans pride!" src="https://novimatrem.uk/assets/banner.png" style="width:10%; height:auto; margin:0 auto; text-align: center; display: block; border:3px solid black; padding:0px;">
 <br>
 <div class="countup" id="countup1">
   <span class="timeel days">00</span>
