--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <link rel="stylesheet" type="text/css" href="https://gitlab.com/Novimatrem/blog/-/raw/master/_layouts/css.css">
 
-<meta name="keywords" content="HTML,CSS,Novimatrem,Whitehat,Novi,novimatrem.uk,Blog,Tea,Linux,novichan">
+<meta name="keywords" content="HTML,CSS,Novimatrem,Whitehat,Novi,novimatrem.uk,Blog,Tea,Linux,novichan,zoey,zoeyglobe,jordan,jordanglobe,Globe">
 
 <!-- i got a domain, so, this is needed to redirect, because gitlab pages is weird..
 <script type="text/javascript">
